src/test/ui/parser/issue-8537.stderr
error[E0703]: invalid ABI: found `invalid-ab_isize`
  --> $DIR/issue-8537.rs:2:3
   |
LL |   "invalid-ab_isize"
   |   ^^^^^^^^^^^^^^^^^^ invalid ABI
   |
   = help: valid ABIs: cdecl, stdcall, fastcall, vectorcall, thiscall, aapcs, win64, sysv64, ptx-kernel, msp430-interrupt, x86-interrupt, amdgpu-kernel, Rust, C, system, rust-intrinsic, rust-call, platform-intrinsic, unadjusted

error: aborting due to previous error

